Fixing alignment of serach glass icon on ie9

--- a/ui/classes/icons/icons.scss
+++ b/ui/classes/icons/icons.scss
@@ -375,7 +375,7 @@ $classPrefix: '.icon-';
     width: 17px;
     height: 18px;
 
-    margin-top: -15px\9;
+    margin-top: -15px\8;
   }
 }
 
